--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,7 @@
   --color-bg100: #334155;
   --color-bg200: #1e293b;
   --color-bg300: #0f172a;
+  --color-bg400: #18212f;
 
   --color-primary-hover: #059669;
   --color-primary-pressed: #047857;
