Fix : body 폰트컬러 기본값 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @layer {
   body {
     font-family: 'Pretendard', sans-serif;
-    color: var(--color-text-primary);
+    color: var(--color-gray100);
   }
   button {
     cursor: pointer;
