--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
   body {
     font-family: 'Pretendard', sans-serif;
     color: var(--color-gray100);
+    background-color: var(--color-bg300);
   }
   button {
     cursor: pointer;
