--- a/src/components/calendar/style.css
+++ b/src/components/calendar/style.css
@@ -1,4 +1,5 @@
 .react-calendar {
+  width: 100%;
   background-color: var(--color-bg200);
   border: 1px solid var(--color-primary);
   border-radius: 12px;
