Style : global.css 수정과 수정된 내용 적용

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,9 +58,9 @@
   --text-4xl--line-height: 3rem;
   --text-4xl--font-weight: 500;
 
-  --text-4xl-md: 2.5rem;
-  --text-4xl-md--line-height: 3rem;
-  --text-4xl-md--font-weight: 600;
+  --text-4xl-bold: 2.5rem;
+  --text-4xl-bold--line-height: 3rem;
+  --text-4xl-bold--font-weight: 700;
 
   --text-3xl-bold: 2rem;
   --text-3xl-bold--line-height: 2.375rem;
