--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,6 +174,7 @@
 @theme {
   --animate-slide-up: slide-up 0.2s ease-out;
   --animate-scale-in: scale-in 0.2s ease-out;
+  --animate-detail-task: scale-in-right-to-left 0.7s ease-out;
 
   @keyframes slide-up {
     from {
@@ -194,6 +195,14 @@
     to {
       transform: scale(1);
       opacity: 1;
+    }
+  }
+  @keyframes scale-in-right-to-left {
+    from {
+      transform: translateX(100%);
+    }
+    to {
+      transform: translateX(0);
     }
   }
 }
