--- a/src/components/calendar/style.css
+++ b/src/components/calendar/style.css
@@ -44,11 +44,21 @@
   color: var(--color-primary);
 }
 
+.react-calendar__navigation button:disabled {
+  background: none;
+  color: var(--color-bg100);
+}
+
 .react-calendar__tile--active,
 .react-calendar__tile--active:enabled:hover {
   background: var(--color-primary);
   color: var(--color-bg200);
   border-radius: 8px;
+}
+
+.react-calendar__tile:disabled {
+  background-color: var(--color-bg200);
+  color: var(--color-bg100);
 }
 
 .react-calendar__month-view__days__day--neighboringMonth {
