Style : taskList 목록의 scroll-x hidden 처리

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,9 @@
     -webkit-text-fill-color: var(--color-gray100) !important;
     caret-color: var(--color-gray100) !important;
   }
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 @theme {
