Style : 회원가입 성공모달에 로딩바 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -260,3 +260,12 @@
     -webkit-text-fill-color: transparent;
   }
 }
+
+@keyframes shrinkBar {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0%;
+  }
+}
